webcam js->ts & fix ui overlapping bug on mobile

--- a/htc-frontend/src/App.sass
+++ b/htc-frontend/src/App.sass
@@ -1,6 +1,7 @@
 .App
-  @apply h-screen w-full overflow-hidden
-  text-align: center
+  @apply h-screen w-full
+  @apply grid
+  grid-template-rows: 1fr 11fr
 
 // .App-logo
 //   animation: App-logo-spin infinite 20s linear
