--- a/htc-frontend/src/styles/components/Navbar.sass
+++ b/htc-frontend/src/styles/components/Navbar.sass
@@ -2,8 +2,8 @@
 @import "styles/utils/fonts.sass"
 
 .navbar
-    @apply relative w-full
-    @apply flex justify-start items-center
+    @apply block w-full
+    @apply flex justify-center items-center
     height: $height-primary
     background-color: $color-common
     padding: $padding-primary
