--- a/htc-frontend/src/styles/utils/utils.sass
+++ b/htc-frontend/src/styles/utils/utils.sass
@@ -12,6 +12,7 @@ $button-height-primary: theme("height[12]")
 $button-height-secondary: theme("height[8]")
 
 $margin-primary: theme("margin[4]")
+$margin-secondary: theme("margin[2]")
 $padding-primary: theme("padding[4]")
 $component-common-gap: theme("gap[12]")
 $component-common-padding: theme("padding[4]")
